<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">TITLE</string>
    <string name="crime_details_label">DETAILS</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime</string>
    <string name="time_picker_title">Crime time</string>
    <string name="time_button_text">%1$s:%2$s</string>
    <string name="dialog_ok">OK</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="no_crimes">The crime list is empty</string>
    <string name="add_crime_button">Add</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s.
    </string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="call_suspect_text">Call suspect</string>
    <string name="image_description">Crime photo</string>
    <string name="crime_photo">Crime photo</string>
    <string name="image_dialog_title">Crime image</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

</resources>
